<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amltools_docs</name>
  <version>0.3.0</version>
  <description>
    Open Source tools to work with AML.
  </description>
  <maintainer email="raul@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <maintainer email="irenebandera@eprosima.com">Irene Bandera</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://alma-ai.eu/</url>
  <url type="bugtracker">https://github.com/eProsima-Private/AML-Tools/issues</url>
  <url type="repository">https://github.com/eProsima-Private/AML-Tools</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cmake_utils</depend>
  <depend>Sphinx</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
